@@ -7,8 +7,9 @@ Released ?????? ??, ????
 - CountryHoliday class deprecation (replaced by country_holidays) (mborsetti, dr-p)
 - Refactoring / cleanups / code and naming reviews (mborsetti)
 - Support for Uzbekistan #593 (slako, dr-p)
-- Wrong year expansion fix #586 (mborsetti, dr-p)
+- Wrong year expansion fix #586, #606 (mborsetti, dr-p)
 - Spain improvements #580,#603 (gtrabanco, dr-p)
+- UAE updates (weekend change) #609 (marcomasulli, dr-p)
 - US fixes #594, #595 (apicht)
 - UK fixes #587 (mborsetti)
 - Russia fixes #582 (Enzokot)
